--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row end d-none">
         <div class="col">
           <div class="card"></div>
         </div>
